--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
       "reflect-metadata": "^0.1.10",
       "routing-controllers": "^0.9.0",
       "typeorm": "0.2.41",
-      "typeorm-routing-controllers-extensions": "^0.2.0",
-      "typeorm-seeding": "^1.6.1"
+      "typeorm-routing-controllers-extensions": "^0.2.0"
    },
    "scripts": {
       "dev": "nodemon public/index.ts",
       "start": "ts-node public/index.ts",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-      "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
+      "seed": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:run -c seed",
+      "seed:generate": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:create -c seed -n",
+      "migrate": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:run",
+      "migrate:generate": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:create -n",
+      "migrate:rollback": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:revert"
    }
 }
